--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
+    "uuid": "^10.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
